# TobeCarried

./: .gitignore  .gitmodules  README.md  build.sh
doc/: kickoff.md
src/: CMakeLists.txt  CustomMdSpi.cpp  CustomMdSpi.h  CustomTradeSpi.cpp  CustomTradeSpi.h  StrategyTrade.cpp  StrategyTrade.h  TickToKlineHelper.cpp  main.cpp
src/CTP_API/lib64/: .gitattributes  CMakeLists.txt
src/benchmark/: CMakeLists.txt
src/benchmark/clone/: clone.cpp
src/benchmark/execve_uname/: execve_uname.cpp
src/benchmark/file/: closekey.cpp  openkey.cpp  readkey.cpp  writekey.cpp
src/benchmark/ioctl/: ioctl.cpp
src/benchmark/network/: netlink.cpp  tcpcli.cpp  tcpsvr.cpp
src/benchmark/scripts/: default_config.yaml  main.py
src/ptrace/: CMakeLists.txt  fileWhitelist.cpp  fileWhitelist.h  fmt.h  main.cpp  networkMonitor.cpp  networkMonitor.h  parameter.h  report.cpp  report.h  rule.cpp  rule.h  ruleManager.cpp  ruleManager.h  rulePlugin.h  structDecoder.cpp  structDecoder.h  syscall_assist.h  tracee.cpp  tracee.h  tracer.cpp  tracer.h  utils.cpp  utils.h  whitelist.cpp  whitelist.h
src/ptrace/app/: CMakeLists.txt  example.yml  main.cpp  start.sh  whitelist.yml
src/ptrace/tests/: CMakeLists.txt  main.cpp  mock.h  ruleTest.cpp  traceeTest.cpp
yamls/: example.yml
